# refpymsi

./: .gitignore  README.md  pyproject.toml
refpymsi/: __init__.py  utils.py
refpymsi/listes/: get_liste.py
refpymsi/tables/: get_table.py
