[tool.poetry]
name = "refpymsi"
version = "2023.0.1"
description = "Référentiels PMSI pour python"
authors = ["GuillaumePressiat <guillaume.pressiat@gmail.com>"]
license = "AGPL"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
